refactor: Update package and Vercel config
Adjusts `package.json` to simplify build and install scripts. Modifies `vercel.json` to better define static site deployment with Vercel, including route configurations.

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,15 @@
 
 {
-  "buildCommand": null,
-  "installCommand": "echo 'No install needed'",
-  "framework": null,
-  "outputDirectory": "."
+  "version": 2,
+  "cleanUrls": true,
+  "trailingSlash": false,
+  "buildCommand": "echo 'Static Site'",
+  "installCommand": "echo 'Skip Install'",
+  "outputDirectory": ".",
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/$1"
+    }
+  ]
 }
