--- a/package.json
+++ b/package.json
@@ -1,22 +1,10 @@
+
 {
-  "name": "copy-of-neon-hand-waves",
+  "name": "neon-hand-waves",
+  "version": "1.0.0",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
-    "@google/genai": "1.3.2"
-  },
-  "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "build": "mkdir -p .anchor && cp index.html .anchor/",
+    "install": "echo 'No dependencies needed'"
   }
 }
