refactor: Simplify Vercel configuration
Removes unnecessary build and install commands, and cleans up routes.
Also removes unnecessary fields from package.json.

--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,8 @@
 
 {
   "version": 2,
-  "cleanUrls": true,
-  "trailingSlash": false,
-  "buildCommand": "echo 'Static Site'",
-  "installCommand": "echo 'Skip Install'",
-  "outputDirectory": ".",
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/$1"
-    }
-  ]
+  "public": true,
+  "buildCommand": null,
+  "installCommand": null,
+  "outputDirectory": "."
 }
